--- a/HDI_v5_AE_MNIST.ipynb
+++ b/HDI_v5_AE_MNIST.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "# HDI-v5 - AE-enabeld ==> Using MNIST as input\n",
+        "# HDI-v5 - AE-enabeld ==> Using MNIST as input and device if GPU avaialable\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -415,7 +415,20 @@
         "criterion = nn.MSELoss()  # Mean Squared Error for reconstruction\n",
         "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
         "\n",
+        "#####################################################################\n",
         "\n",
+        "# Track metrics for plotting\n",
+        "correlation_history = []  # To track correlations between levels\n",
+        "independence_history = []  # To track average independence correlations\n",
+        "mutual_information_history = []  # To track mutual information between levels\n",
+        "adjacent_dependence_history = []  # To track adjacent level dependence\n",
+        "\n",
+        "# Initialize lists to track losses\n",
+        "corr_loss_history = []  # To track correlation loss\n",
+        "indep_loss_history = []  # To track independence loss\n",
+        "mi_loss_history = []\n",
+        "adj_loss_history=[]\n",
+        "total_loss_history = []  # To track total loss\n",
         "\n",
         "model.train()\n",
         "# Training the autoencoder\n",
@@ -465,10 +478,24 @@
         "        total_loss.backward()\n",
         "        optimizer.step()\n",
         "\n",
+        "\n",
+        "        # Track metrics\n",
+        "        correlation_history.append(correlations)\n",
+        "        independence_history.append(avg_independence_corrs)\n",
+        "        # mutual_information_history.append(mutual_infos)\n",
+        "        adjacent_dependence_history.append(dependence_values)\n",
+        "\n",
+        "\n",
+        "        # Track losses\n",
+        "        corr_loss_history.append(corr_loss.item())\n",
+        "        indep_loss_history.append(indep_loss.item())\n",
+        "        # mi_loss_history.append(mi_loss.item())\n",
+        "        adj_loss_history.append(adj_loss.item())\n",
+        "        total_loss_history.append(total_loss.item())\n",
+        "\n",
         "        # train_loss += loss.item()\n",
         "        train_loss += total_loss.item()\n",
         "\n",
-        "    train_loss_per_epoch=train_loss / len(train_loader)\n",
         "    print(f\"Epoch [{epoch + 1}/{num_epochs}], \"\n",
         "          f\"Reconstruction Loss: {reconstruction_loss.item():.4f}, \"\n",
         "          f\"Correlation Loss: {corr_loss.item():.4f}, Independence Loss: {indep_loss:.4f}, \"\n",
@@ -503,80 +530,82 @@
         "    plt.axis('off')\n",
         "\n",
         "plt.show()\n",
-        "            # return images, outputs  # Return a batch for visualization\n"
+        "            # return images, outputs  # Return a batch for visualization\n",
+        "\n",
+        "####################################################\n",
+        "fig, axs = plt.subplots(1, 4, figsize=(18, 6))\n",
+        "losses = [\n",
+        "    (corr_loss_history, \"Correlation Loss\", \"blue\"),\n",
+        "    (indep_loss_history, \"Independence Loss\", \"orange\"),\n",
+        "    (adj_loss_history, \"Adjacent Dependence Loss\", \"magenta\"),\n",
+        "    (total_loss_history, \"Total Loss\", \"green\"),\n",
+        "]\n",
+        "\n",
+        "for i, (loss, title, color) in enumerate(losses):\n",
+        "    axs[i].plot(loss, color=color, linewidth=2)\n",
+        "    axs[i].set_title(title)\n",
+        "    axs[i].set_xlabel(\"Epochs\")\n",
+        "    axs[i].set_ylabel(\"Loss\")\n",
+        "    axs[i].grid()\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Convert tracked metrics to tensors for easier plotting\n",
+        "correlation_history = torch.tensor(correlation_history)\n",
+        "independence_history = torch.tensor(independence_history)\n",
+        "# mutual_information_history = torch.tensor(mutual_information_history)\n",
+        "adjacent_dependence_history = torch.tensor(adjacent_dependence_history)\n",
+        "\n",
+        "# Plot Correlations Between Levels\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "colors = ['r', 'g', 'b', 'orange', 'purple']\n",
+        "for i, color in enumerate(colors):\n",
+        "    plt.plot(correlation_history[:, i], label=f\"Level {i + 2} (Target: {target_correlations[i]})\", color=color, linewidth=2)\n",
+        "    plt.axhline(y=target_correlations[i], color=color, linestyle='--', linewidth=1.5)  # Target line\n",
+        "plt.title(\"Correlation Between Level 1 and Other Levels\")\n",
+        "plt.xlabel(\"Epochs\")\n",
+        "plt.ylabel(\"Correlation\")\n",
+        "plt.legend()\n",
+        "plt.grid()\n",
+        "plt.show()\n",
+        "\n",
+        "# Plot Average Independence Correlations Within Levels\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "for i in range(levels):\n",
+        "    plt.plot(independence_history[:, i], label=f\"Level {i + 1}\", linewidth=2)\n",
+        "plt.title(\"Average Independence Correlations (Within Levels)\")\n",
+        "plt.xlabel(\"Epochs\")\n",
+        "plt.ylabel(\"Average Correlation\")\n",
+        "plt.legend()\n",
+        "plt.grid()\n",
+        "plt.show()\n",
+        "\n",
+        "# Plot Mutual Information Between Levels\n",
+        "# plt.figure(figsize=(12, 6))\n",
+        "# for i, color in enumerate(colors):\n",
+        "#     plt.plot(mutual_information_history[:, i], label=f\"Level {i + 2} (Target: {target_MIs[i]})\", color=color, linewidth=2)\n",
+        "#     plt.axhline(y=target_MIs[i], color=color, linestyle='--', linewidth=1.5)  # Target line\n",
+        "# plt.title(\"Mutual Information Between Level 1 and Other Levels\")\n",
+        "# plt.xlabel(\"Epochs\")\n",
+        "# plt.ylabel(\"MI\")\n",
+        "# plt.legend()\n",
+        "# plt.grid()\n",
+        "# plt.show()\n",
+        "\n",
+        "# Plot Dependence Between Adjacent Levels\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "for i, color in enumerate(colors[:-1]):  # Only `levels - 1` adjacent levels\n",
+        "    dependence_by_level = [dependence[i] for dependence in adjacent_dependence_history]\n",
+        "    plt.plot(dependence_by_level, label=f\"Level {i + 1} vs Level {i + 2}\", color=color, linewidth=2)\n",
+        "    plt.axhline(y=target_dependence[i], color=color, linestyle='--', linewidth=1.5)  # Target line\n",
+        "plt.title(\"Dependence Between Adjacent Levels\")\n",
+        "plt.xlabel(\"Epochs\")\n",
+        "plt.ylabel(\"Dependence (Distance Correlation)\")\n",
+        "plt.legend()\n",
+        "plt.grid()\n",
+        "plt.show()"
       ]
     }
   ]
 }
-####################################################
-fig, axs = plt.subplots(1, 4, figsize=(18, 6))
-losses = [
-    (corr_loss_history, "Correlation Loss", "blue"),
-    (indep_loss_history, "Independence Loss", "orange"),
-    (adj_loss_history, "Adjacent Dependence Loss", "magenta"),
-    (total_loss_history, "Total Loss", "green"),
-]
-for i, (loss, title, color) in enumerate(losses):
-    axs[i].plot(loss, color=color, linewidth=2)
-    axs[i].set_title(title)
-    axs[i].set_xlabel("Epochs")
-    axs[i].set_ylabel("Loss")
-    axs[i].grid()
-
-plt.tight_layout()
-plt.show()
-
-# Convert tracked metrics to tensors for easier plotting
-correlation_history = torch.tensor(correlation_history)
-independence_history = torch.tensor(independence_history)
-# mutual_information_history = torch.tensor(mutual_information_history)
-adjacent_dependence_history = torch.tensor(adjacent_dependence_history)
-
-# Plot Correlations Between Levels
-plt.figure(figsize=(12, 6))
-colors = ['r', 'g', 'b', 'orange', 'purple']
-for i, color in enumerate(colors):
-    plt.plot(correlation_history[:, i], label=f"Level {i + 2} (Target: {target_correlations[i]})", color=color, linewidth=2)
-    plt.axhline(y=target_correlations[i], color=color, linestyle='--', linewidth=1.5)  # Target line
-plt.title("Correlation Between Level 1 and Other Levels")
-plt.xlabel("Epochs")
-plt.ylabel("Correlation")
-plt.legend()
-plt.grid()
-plt.show()
-
-# Plot Average Independence Correlations Within Levels
-plt.figure(figsize=(12, 6))
-for i in range(levels):
-    plt.plot(independence_history[:, i], label=f"Level {i + 1}", linewidth=2)
-plt.title("Average Independence Correlations (Within Levels)")
-plt.xlabel("Epochs")
-plt.ylabel("Average Correlation")
-plt.legend()
-plt.grid()
-plt.show()
-
-# Plot Mutual Information Between Levels
-# plt.figure(figsize=(12, 6))
-# for i, color in enumerate(colors):
-#     plt.plot(mutual_information_history[:, i], label=f"Level {i + 2} (Target: {target_MIs[i]})", color=color, linewidth=2)
-#     plt.axhline(y=target_MIs[i], color=color, linestyle='--', linewidth=1.5)  # Target line
-# plt.title("Mutual Information Between Level 1 and Other Levels")
-# plt.xlabel("Epochs")
-# plt.ylabel("MI")
-# plt.legend()
-# plt.grid()
-# plt.show()
-
-# Plot Dependence Between Adjacent Levels
-plt.figure(figsize=(12, 6))
-for i, color in enumerate(colors[:-1]):  # Only `levels - 1` adjacent levels
-    dependence_by_level = [dependence[i] for dependence in adjacent_dependence_history]
-    plt.plot(dependence_by_level, label=f"Level {i + 1} vs Level {i + 2}", color=color, linewidth=2)
-    plt.axhline(y=target_dependence[i], color=color, linestyle='--', linewidth=1.5)  # Target line
-plt.title("Dependence Between Adjacent Levels")
-plt.xlabel("Epochs")
-plt.ylabel("Dependence (Distance Correlation)")
-plt.legend()
-plt.grid()
-plt.show()
